fix dark mode summary color

--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@ input {
 	font-size: 1.25rem;
 	padding: 0 1rem;
 	height: 3rem;
-	border-radius: .75rem;
 	width: 12rem;
 	bottom: 0;
 	border: 0;
@@ -115,12 +114,13 @@ button {
 }
 
 table {
+	color: #333;
+	background-color: #fff;
 	border-radius: 1rem;
 	padding: 1rem;
-	background-color: #fff;
-	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	border-spacing: 1rem;
+	position: absolute;
 }
